--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,8 @@ on:
 
 
 jobs:
-  test:
-    name: test-${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
+  test-ubuntu:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
 
@@ -22,14 +16,30 @@ jobs:
         run: sudo apt install python3-venv
         if: matrix.os == 'ubuntu-latest'
 
+      - name: Execute automated tests
+        run:  make test
+
+  test-macos:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        update-bash:
+          - yes
+          - no
+    steps:
+      - uses: actions/checkout@v1
+
       - name: Install GNU components
         run: brew install coreutils gnu-sed
-        if: matrix.os == 'macos-latest'
+
+      - name: Update GNU Bash
+        run: brew install bash
+        if: matrix.update-bash
 
       - name: Specify sed command
         run: echo "::set-env name=SED::gsed"
-        if: matrix.os == 'macos-latest'
         # https://help.github.com/en/actions/automating-your-workflow-with-github-actions/development-tools-for-github-actions#set-an-environment-variable-set-env
 
       - name: Execute automated tests
         run:  make test
+        if: matrix.update-bash  # Default macOS bash version (3.2) is not yet supported
