Do not run CI with bash 3.2 yet

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,16 @@ on:
 
 jobs:
   test-macos:
-    name: test-macos (${{ matrix.bash-version }})
     runs-on: macos-latest
-    strategy:
-      matrix:
-        bash-version:
-          - bash-latest
-          - bash-default
+    name: test-macos (bash-latest)
+    ## TODO: Default macOS bash version (3.2) is not yet supported
+    ##       Uncomment section below to enable testing with default macOS bash
+    # name: test-macos (${{ matrix.bash-version }})
+    # strategy:
+    #   matrix:
+    #     bash-version:
+    #       - bash-latest
+    #       - bash-default
     steps:
       - uses: actions/checkout@v1
 
@@ -23,7 +26,7 @@ jobs:
 
       - name: Update GNU Bash
         run: brew install bash
-        if: matrix.bash-version == 'bash-latest'
+        # if: matrix.bash-version == 'bash-latest'
 
       - name: Specify sed command
         run: echo "::set-env name=SED::gsed"
@@ -31,4 +34,3 @@ jobs:
 
       - name: Execute automated tests
         run:  make test
-        if: matrix.bash-version == 'bash-latest'  # TODO: Default macOS bash version (3.2) is not yet supported
