Run automated tests on Centos 7

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,3 +68,6 @@ workflows:
       - test:
           name: test-debian-8
           runner: debian-8
+      - test:
+          name: test-centos-7
+          runner: centos-7
