Pretty names in GitHub web UI

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,6 +1,6 @@
 # Build Docker images and push them to GitHub Container Registry
 
-name: Build Docker images for testing
+name: ci/ghcr
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
 
 jobs:
   docker-build:
-    name: docker-build (${{ matrix.tag }})
+    name: build-${{ matrix.tag }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
