--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -28,3 +28,20 @@ task:
   test_script:
     - su testuser -c 'gmake test'
 
+macos_task:
+  name: 'ci/cirrusci: test-macos'
+  osx_instance:
+    image: catalina-base
+  env:
+    SED: gsed
+    PIP_CACHE_DIR: $CIRRUS_WORKING_DIR/cache/pip
+    # VENVDIR should not be cached: Cirrus CI drops bin/python for some reason when saving cache
+  venv_cache:
+    folder: cache
+    fingerprint_script:
+      - echo "Cache ID: macOS v1"
+      - cat tests/requirements.txt
+  before_script:
+    - brew install coreutils gnu-sed bash make
+  test_script:
+    - gmake test
