--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -36,6 +36,9 @@ macos_task:
     SED: gsed
     PIP_CACHE_DIR: $CIRRUS_WORKING_DIR/cache/pip
     # VENVDIR should not be cached: Cirrus CI drops bin/python for some reason when saving cache
+  clone_script:
+    - git clone "$CIRRUS_REPO_CLONE_URL" .
+    - git reset --hard "$CIRRUS_CHANGE_IN_REPO"
   venv_cache:
     folder: cache
     fingerprint_script:
