--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,6 +25,7 @@ jobs:
           - debian-9
           - debian-10
           - debian-11
+          - debian-12
           - scop
     env:
       DOCKER_TAG: ${{ matrix.tag }}
