--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
           - debian-9
           - debian-10
           - debian-11
+          - debian-12
           - scop
     env:
       PIP_CACHE_DIR: cache/pip
