Move CIRRUS_GITHUB_REPO into repository secrets
This value is not confidential but it is useful to keep it in repository
settings instead of workflow file. That way other contributors may setup
Cirrus CI integration for their forks of this repo with their own
CIRRUS_API_TOKEN and CIRRUS_GITHUB_REPO values

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
           - macos
     env:
       CIRRUS_API_TOKEN: ${{ secrets.CIRRUS_API_TOKEN }}
-      CIRRUS_GITHUB_REPO: sio/.cirrus-ci-jobs
+      CIRRUS_GITHUB_REPO: ${{ secrets.CIRRUS_GITHUB_REPO }}
       CIRRUS_SHOW_BUILD_LOG: always
     steps:
       - uses: actions/checkout@v1
