Execute CI tests in Msys2 on Windows
Msys2 is installed by default in windows-latest:
	https://github.com/actions/runner-images/blob/main/images/win/Windows2022-Readme.md

It still requires user to install the corresponding packages for
Python and GNU Make, and the PATH variable is not set automatically.
Using default runner's PATH will lead to confusion and may trigger
"cygheap base mismatch errors"

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,3 +50,23 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: cirrus-run .ci/cirrus-${{ matrix.os }}.yml.j2
+
+  test-msys2:
+    runs-on: windows-latest
+    env:
+      PIP_CACHE_DIR: cache/pip
+    defaults:
+      run:
+        shell: C:\msys64\usr\bin\bash.exe {0}
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/cache@v1
+        with:
+          path: cache
+          key: cache-v1-${{ runner.os }}-msys2-${{ hashFiles('tests/requirements.txt') }}
+      - name: make test
+        run: |-
+          pacman --noconfirm -Sy make python3
+          make test
+        env:
+          PATH: '/usr/local/bin:/usr/bin:/bin'
