--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,16 +57,41 @@ jobs:
       PIP_CACHE_DIR: cache/pip
     defaults:
       run:
-        shell: C:\msys64\usr\bin\bash.exe {0}
+        shell: C:\msys64\usr\bin\bash.exe -xeuo pipefail {0}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/cache@v1
         with:
           path: cache
           key: cache-v1-${{ runner.os }}-msys2-${{ hashFiles('tests/requirements.txt') }}
+
+      - name: Install static build of curl
+        run: |-
+          pacman --noconfirm -Sy unzip
+          mkdir -p /tmp/curl /usr/local/bin
+          cd /tmp/curl
+          curl -sSL "https://curl.se/windows/dl-7.87.0/curl-7.87.0-win64-mingw.zip" -o /tmp/curl.zip
+          unzip /tmp/curl.zip
+          mv curl*/bin/curl.exe curl*/bin/*.crt /usr/local/bin/
+          which curl
+          curl --version
+        env:
+          PATH: '/usr/local/bin:/usr/bin:/bin'
+
+      - name: Upgrade Msys2 environment
+        run: |-
+          exec pacman --noconfirm -Syu
+        env:
+          PATH: '/usr/local/bin:/usr/bin:/bin'
+
+      - name: Install dependencies
+        run: |-
+          exec pacman --noconfirm -Sy make python3 libopenssl curl libcurl
+        env:
+          PATH: '/usr/local/bin:/usr/bin:/bin'
+
       - name: make test
         run: |-
-          pacman --noconfirm -Sy make python3
           make test
         env:
           PATH: '/usr/local/bin:/usr/bin:/bin'
