--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,3 +95,11 @@ jobs:
           make test
         env:
           PATH: '/usr/local/bin:/usr/bin:/bin'
+
+  shellcheck:
+    runs-on: ubuntu-latest
+    name: shellcheck
+    container: koalaman/shellcheck-alpine
+    steps:
+      - uses: actions/checkout@v3
+      - run: shellcheck bash_completion
