Use Makefile for CI entrypoint

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,4 +102,5 @@ jobs:
     container: koalaman/shellcheck-alpine
     steps:
       - uses: actions/checkout@v3
-      - run: shellcheck bash_completion
+      - run: apk update; apk add make
+      - run: make lint
