Fix embarrasing typo

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
       - '**.md'
       - '.git*'
   pull_request:
-  worflow_dispatch:
+  workflow_dispatch:
   schedule:
     - cron: '45 3 5,15,25 * *'
 
